--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,24 +7,16 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.InstallHook">
+            android:supportsRtl="true">
         <meta-data
                 android:name="xposedmodule"
-                android:value="true" />
+                android:value="true"/>
         <meta-data
                 android:name="xposeddescription"
-                android:value="Easy example which makes the status bar clock red and adds a smiley" />
+                android:value="安装自动化go!go!go!"/>
         <meta-data
                 android:name="xposedminversion"
-                android:value="53" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+                android:value="53"/>
     </application>
 
 </manifest>
